# OSVR-Vive-Libre

./: .gitignore  CMakeLists.txt  README.md  com_osvr_Vive.json  openhmd.c  org_osvr_Vive_Libre.cpp  org_osvr_Vive_Libre.json  osvr_server_config.vive_libre.sample.json  packet.c  test.cpp  vive.c  vive.cpp  vive.h  vive_libre.extended.landscape.json
config/: 83-vive.rules  HTC_Vive_meshdata.json  org_osvr_Vive_Libre.json  osvr_server_config.vive_libre.sample.json
displays/: HTC_Vive.json  README.txt
src/: fusion.cpp  fusion.h  hid-reports.h  hidraw.h  omath.cpp  omath.h  openhmd.cpp  openhmdi.h  org_osvr_Vive_Libre.cpp  vive.cpp  vive.h  vl_config.cpp  vl_config.h  vl_driver.cpp  vl_driver.h  vl_enums.h  vl_fusion.cpp  vl_fusion.h  vl_hid_reports.h  vl_hidraw.h  vl_light.cpp  vl_light.h  vl_log.cpp  vl_log.h  vl_magic.h  vl_math.h  vl_messages.h  vl_synchronous.h
tests/: hid-enumerate.cpp  minimal-hid.cpp
tools/: vivectl.cpp
valgrind/: valgrindctl
valgrind/suppressions/: hidapi.supp
